--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <div id="sumInvestSlider" class="custom-slider"></div>
               </li>
               <li class="invest__item">
-                <p class="invest__subtitle-left">Прогнозируемая ставка:</p>
+                <p class="invest__subtitle-left">Прогнозируемая прибыль:</p>
                 <p class="invest__subtext" id="forecastPercent">27,3%</p>
               </li>
               <li class="invest__item">
@@ -353,9 +353,9 @@
         const incomeInvest = document.getElementById("incomeInvest");
 
         const forecastRates = {
-          12: 27.3,
-          18: 48.5,
-          30: 69.5,
+          12: 14,
+          18: 21,
+          30: 35,
         };
 
         const timeValues = {
