--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <div id="sumInvestSlider" class="custom-slider"></div>
               </li>
               <li class="invest__item">
-                <p class="invest__subtitle-left">Прогнозируемая прибыль:</p>
+                <p class="invest__subtitle-left">Прогнозируемый доход:</p>
                 <p class="invest__subtext" id="forecastPercent">27,3%</p>
               </li>
               <li class="invest__item">
